nopdb/constraints/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoPDB
metadata:
  name: nopdb
spec:
  match:
    kinds:
      - apiGroups: ["policy"]
        kinds: ["PodDisruptionBudget"]
